--- a/IoSilownia/View/Form.xaml
+++ b/IoSilownia/View/Form.xaml
@@ -3,10 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:IoSilownia.View"
+             xmlns:vm="clr-namespace:IoSilownia.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="622"
+             Style ="{StaticResource Page_Style}">
+    
+    <UserControl.DataContext>
+        <vm:FormVM/>
+    </UserControl.DataContext>
+    
     <Grid>
-            
+        <Border CornerRadius="0,20,20,0">
+            <Border.Background>
+                <ImageBrush ImageSource="/images/Recepcja.png"
+                            Stretch="fill"/>
+            </Border.Background>
+        </Border>
     </Grid>
 </UserControl>
