--- a/IoSilownia/View/Home.xaml
+++ b/IoSilownia/View/Home.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:IoSilownia.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="622">
     <Grid>
-            
+        <Border CornerRadius="0,20,20,0">
+            <Border.Background CornerRadius ="0,20,20,0">
+                <ImageBrush ImageSource="/Images/Bocian.png"
+                            
+                                Stretch="Fill"/>
+                
+            </Border.Background>
+        </Border>
     </Grid>
 </UserControl>
