--- a/IoSilownia/MainWindow.xaml
+++ b/IoSilownia/MainWindow.xaml
@@ -55,6 +55,15 @@
                        
 
                     </Menu:Btn>
+                    <!-- Customer -->
+                    <Menu:Btn Style="{StaticResource BtnStyle}"
+                              Command="{Binding HomeCommand}">
+                        <Grid>
+                            <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\customer_menu.png"
+                                Style="{StaticResource Image_Style}"/>
+                            
+                        </Grid>
+                    </Menu:Btn>
 
                 </StackPanel>
             </Grid>
