Added 3 buttons , Images and Uri function in BTN

--- a/IoSilownia/MainWindow.xaml
+++ b/IoSilownia/MainWindow.xaml
@@ -9,68 +9,71 @@
         Title="MainWindow" Height="600" 
         Width="850"
         AllowsTransparency="True"
-        WindowStartupLocation ="CenterScreen"
+        WindowStartupLocation="CenterScreen"
         WindowStyle="None"
-        Background="Transparent"
-        
-        >
+        Background="Transparent">
 
     <Window.DataContext>
         <vm:NavigationVM/>
     </Window.DataContext>
+
     <Grid>
         <!--//window Border //-->
-        <Border Background="#212529"
-                CornerRadius="20">
-            
+        <Border Background="#212529" CornerRadius="20">
         </Border>
-        
-        <Grid>
 
-         <!--// Base grid// -->
+        <Grid>
+            <!--// Base grid// -->
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="228"/>
                 <ColumnDefinition Width="622"/>
             </Grid.ColumnDefinitions>
-           <!-- Nav panel -->
-            <Grid HorizontalAlignment="Left"
-                  Width="228">
-                
-                <Border Background="#272B2f"
-                        CornerRadius="20,0,0,20"/>
-                <StackPanel Height="400"
-                            Width="228">
+
+            <!-- Nav panel -->
+            <Grid HorizontalAlignment="Left" Width="228">
+                <Border Background="#272B2f" CornerRadius="20,0,0,20"/>
+                <StackPanel Height="400" Width="228">
                     <!--Home-->
-                    <Menu:Btn Style="{StaticResource BtnStyle}"
-                              Command="{Binding HomeCommand}"
-                              IsChecked="True">
+                    <Menu:Btn Style="{StaticResource BtnStyle}" Command="{Binding HomeCommand}" IsChecked="True">
                         <Grid>
-
                             <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Home2.png"
-                                   Style="{StaticResource Image_Style}"/>
-                            <TextBlock Text="Home"
-                                       Style="{StaticResource Text_Style}"/>
-                            
+                                   Style="{StaticResource Image_Style}" Height="28.4415584415584"/>
+                            <TextBlock Text="Home" Style="{StaticResource Text_Style}"/>
                         </Grid>
-                       
-
                     </Menu:Btn>
+
                     <!-- Customer -->
-                    <Menu:Btn Style="{StaticResource BtnStyle}"
-                              Command="{Binding HomeCommand}">
+                    <Menu:Btn Style="{StaticResource BtnStyle}" Command="{Binding HomeCommand}">
                         <Grid>
                             <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\customer_menu.png"
-                                Style="{StaticResource Image_Style}"/>
-                            
+                                   Style="{StaticResource Image_Style}" Height="28.4415584415584"/>
+                            <TextBlock Text="Customer" Style="{StaticResource Text_Style}"/>
                         </Grid>
                     </Menu:Btn>
 
+                    <!-- forms -->
+                    <Menu:Btn Style="{StaticResource BtnStyle}" Command="{Binding HomeCommand}">
+                        <Grid>
+                            <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Forms_mn.png"
+                                   Style="{StaticResource Image_Style}" Height="28.4415584415584"/>
+                            <TextBlock Text="Recepcja" Style="{StaticResource Text_Style}"/>
+                        </Grid>
+                    </Menu:Btn>
+
+                    <!-- Trener -->
+                    <Menu:Btn Style="{StaticResource BtnStyle}" Command="{Binding HomeCommand}" x:Name="Trener"
+                              Cursor="Hand" Click="Trener_Click">
+                        <Grid>
+                            <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Trener_mn.png"
+                                   Style="{StaticResource Image_Style}" Height="28.4415584415584"/>
+                            <TextBlock Text="Trener" Style="{StaticResource Text_Style}"/>
+                        </Grid>
+                    </Menu:Btn>
                 </StackPanel>
             </Grid>
-            
-            
+
+            <!-- Frame -->
+            <Frame x:Name="MainFrame" Grid.Column="1"/>
         </Grid>
-                
-        
     </Grid>
 </Window>
