--- a/IoSilownia/View/Training.xaml
+++ b/IoSilownia/View/Training.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Border CornerRadius="0,20,20,0">
+            <Border.Background >
+                <ImageBrush ImageSource="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Trener.png"
+                            
+                                Stretch="Fill"/>
+
+            </Border.Background>
+        </Border>
     </Grid>
 </UserControl>
