Added textbox that informs about Version of Software also provided changes that made border invisible in clock box

--- a/IoSilownia/MainWindow.xaml
+++ b/IoSilownia/MainWindow.xaml
@@ -70,11 +70,11 @@
                             <Image Source="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Trener_mn.png"
                                    Style="{StaticResource Image_Style}" Height="28.4415584415584"/>
                             <TextBlock Text="Trener" Style="{StaticResource Text_Style}"/>
-                      
-                            
-                            
+
+
+
                         </Grid>
-            
+
                     </Menu:Btn>
 
                 </StackPanel>
@@ -90,11 +90,25 @@
              Width="228" 
              Height="34" 
              BorderBrush="#DBDBDB"
-             BorderThickness="1"
+             BorderThickness="0"
              Foreground="#DBDBDB"
              FontFamily="/Fonts/#Rubik" />
                 </Grid>
+                
 
+                <TextBox x:Name="txtExample" 
+                 Background="Transparent"
+                 HorizontalAlignment="Left" 
+                 VerticalAlignment="Top" 
+                 FontSize="22"
+                 Foreground="#DBDBDB"
+                 FontFamily="/Fonts/#Rubik"
+                 BorderBrush="#DBDBDB"
+                 BorderThickness="0"
+                 Width="200"
+                 Height="40" Margin="10,550,0,0" 
+                 Text="Ver 23.1.1"
+                         />
 
             </Grid>
 
