--- a/IoSilownia/View/Training.xaml
+++ b/IoSilownia/View/Training.xaml
@@ -5,15 +5,72 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:IoSilownia.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+               d:DesignHeight="600" 
+             d:DesignWidth="622">
     <Grid>
         <Border CornerRadius="0,20,20,0">
-            <Border.Background >
+            <Border.Background>
                 <ImageBrush ImageSource="C:\Users\worys\Desktop\IO\GMS\IoSilownia\IoSilownia\Images\Trener.png"
-                            
-                                Stretch="Fill"/>
-
+                            Stretch="Fill"/>
             </Border.Background>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Wybierz opcję :"
+                           Foreground="#DBDBDB"
+                           FontSize="18"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           FontFamily="/Fonts/#Rubik Medium"
+                           Margin="285,51,0,0"
+                           Height="30"
+                           Width="160"
+                           RenderTransformOrigin="0.439,1" 
+                           Grid.ColumnSpan="2"
+                           Visibility="Visible"
+                           x:Name="Txt_opt"/>
+
+                <ComboBox Grid.Column="1"
+                    Margin="430,51,52,526"
+                    Visibility="Visible"
+                    x:Name="combo_opt"
+                    SelectionChanged="combo_opt_SelectionChanged">
+                    <ComboBoxItem Content="Silownia" />
+                    <ComboBoxItem Content="Sztuki walki" />
+                    <ComboBoxItem Content="Fitness" />
+                </ComboBox>
+
+                <TextBlock Text="Wybierz Trenera :"
+                           Foreground="#DBDBDB"
+                           FontSize="18"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           FontFamily="/Fonts/#Rubik Medium"
+                           Margin="285,120,0,0"
+                           Height="30"
+                           Width="160"
+                           RenderTransformOrigin="0.439,1" Grid.ColumnSpan="2"
+                           x:Name="Trener_txt"
+                           Visibility="Collapsed"/>
+
+                <ComboBox Grid.Column="1" 
+                          Margin="445,119,37,458"
+                          Visibility="Collapsed"
+                          x:Name="trener_ch">
+                    <ComboBoxItem Content="Jan Kowalski"/>
+                    <ComboBoxItem Content="Klaudiusz Mączlaski"/>
+                    <ComboBoxItem Content="Jarosław Grzegorz"/>
+                    <ComboBoxItem Content="Nikolas Mazurkos"/>
+                    <ComboBoxItem Content="Łukasz Worpor"/>
+                    <ComboBoxItem Content="Krystian Mazurkiewicz"/>
+                    <ComboBoxItem Content="Macias Korzuch"/>
+                    <ComboBoxItem Content="Wiesław Topczuk"/>
+
+                </ComboBox>
+
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
